Fixed tab menu logo issue not showing on android.

--- a/Source/Mobile/src/app/pages/users/tabs/tabs.page.scss
+++ b/Source/Mobile/src/app/pages/users/tabs/tabs.page.scss
@@ -25,8 +25,7 @@ ion-icon{
 }
 
 .menu-logo {
-    padding-bottom: 5px;
-    position: absolute;
-    height: -webkit-fill-available;
+	padding-left: 7px;
+	height: 55px;
     width: auto;
 }
